--- a/gb/22/1/11/n13496153.md
+++ b/gb/22/1/11/n13496153.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vfkyrj397/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vfkyrj397/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vfkyrj397/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>卑诗省中小学生今日返校</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2022年01月11日讯】<span style="font-weight: 400;">（大纪元记者</span><span style="font-weight: 400;">柳晴</span><span style="font-weight: 400;">加拿大温哥华报导）</span><ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97%E7%9C%81.md#1">卑诗省</a>学生因高度传染性的Omicron变体病毒而推迟一周开学，家长反应各不相同。</p>
-<p>省教育厅和公共卫生部门表示，出于对多方面因素的考量，最后做出了中小学生继续接受面授教育的决定。<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97%E7%9C%81.md#1">卑诗省</a>教育厅长韦瑞珍（Jennifer Whiteside）对此表示：“我们知道回到安全的课堂学习对孩子们是多么的重要。”</p>
+<p>【大纪元2022年01月11日讯】<span style="font-weight: 400;">（大纪元记者</span><span style="font-weight: 400;">柳晴</span><span style="font-weight: 400;">加拿大温哥华报导）</span><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97%E7%9C%81.md#1">卑诗省</a>学生因高度传染性的Omicron变体病毒而推迟一周开学，家长反应各不相同。</p>
+<p>省教育厅和公共卫生部门表示，出于对多方面因素的考量，最后做出了中小学生继续接受面授教育的决定。<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97%E7%9C%81.md#1">卑诗省</a>教育厅长韦瑞珍（Jennifer Whiteside）对此表示：“我们知道回到安全的课堂学习对孩子们是多么的重要。”</p>
 <p>省长贺谨在周五的推特上写到，为了保持孩子们的社会交往能力，确保他们的心理和智力健康，“孩子们在教室里学习是非常重要的” 。</p>
 <p>然而一些家长仍持观望态度，看看返校对COVID-19病例数会有什么影响，再决定是否送孩子去学校。但另一些家长认为，孩子们需要学校的环境，急切的希望重新开学。</p>
-<p>白石地区的一位妈妈Irene 告诉《大纪元》记者，“我希望让小朋友<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E4%B8%8A%E7%BD%91%E8%AF%BE.md#1">上网课</a>，因为有些小朋友生病了也会跑去学校，增加了感染的风险。但是还是送小朋友们去上学了，因为他们自己愿意去，关不住！”</p>
-<p>大温地区的一位年轻家长小鹿说：“如果改成网课，我（会）非常的焦虑。因为小女儿只有一岁多，经常大吵大叫，影响哥哥上课，也会影响其他小朋友。如果<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E4%B8%8A%E7%BD%91%E8%AF%BE.md#1">上网课</a>，我就要把孩子送去别人家托管了。”</p>
+<p>白石地区的一位妈妈Irene 告诉《大纪元》记者，“我希望让小朋友<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%8A%E7%BD%91%E8%AF%BE.md#1">上网课</a>，因为有些小朋友生病了也会跑去学校，增加了感染的风险。但是还是送小朋友们去上学了，因为他们自己愿意去，关不住！”</p>
+<p>大温地区的一位年轻家长小鹿说：“如果改成网课，我（会）非常的焦虑。因为小女儿只有一岁多，经常大吵大叫，影响哥哥上课，也会影响其他小朋友。如果<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%8A%E7%BD%91%E8%AF%BE.md#1">上网课</a>，我就要把孩子送去别人家托管了。”</p>
 <p>素里的一位妈妈Sandra说：“过去的这一周真是太忙碌了。我女儿Maya开心极了能重新回到学校，头也不回的就跑了，都忘了跟我说再见。我也很高兴她重新回到学校。”</p>
 <p>根据CTV新闻的报导，维多利亚的一位家长莫莉凯（Mollie Kaye）说：“我认为这是我们回顾过去的好时机，政府告诉我这是安全的，我不知道可能发生什么。”莫莉凯本周不会让她的女儿回到课堂。</p>
 <p>卑诗省是目前四个继续进行面对面上课的省份之一；全国其他地区已经进入虚拟学习阶段。</p>
-<p>1月7日，卑诗省卫生官宣布了学校的新安全措施，包括错开休息时间、虚拟集会，同时呼吁教师佩戴三层<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>等要求。</p>
+<p>1月7日，卑诗省卫生官宣布了学校的新安全措施，包括错开休息时间、虚拟集会，同时呼吁教师佩戴三层<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>等要求。</p>
 <p>但是，教师们说还需要做更多的工作。他们希望看到为工作人员提供适当的个人防护设备，更多的疫苗接种，以及改善教室的空气流通。</p>
-<p><span style="font-weight: 400;">省教育厅说，它已经改善了教室的空气</span><span style="font-weight: 400;">品</span><span style="font-weight: 400;">质，本周将对出现症状的人进行更多的<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%BF%AB%E9%80%9F%E6%B5%8B%E8%AF%95.md#1">快速测试</a>。</span></p>
+<p><span style="font-weight: 400;">省教育厅说，它已经改善了教室的空气</span><span style="font-weight: 400;">品</span><span style="font-weight: 400;">质，本周将对出现症状的人进行更多的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BF%AB%E9%80%9F%E6%B5%8B%E8%AF%95.md#1">快速测试</a>。</span></p>
 <p>素里Queen Elizabeth中学教师丽莎娜?福斯特（Lizanne Foster）说：“我们可以使学校绝对安全，而现在它们并不安全。”</p>
-<p>福斯特还对目前<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>任务的豁免情况表示担忧。她说：“很多家长一直在使用这些豁免，让学生拒绝戴口罩。”</p>
+<p>福斯特还对目前<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>任务的豁免情况表示担忧。她说：“很多家长一直在使用这些豁免，让学生拒绝戴口罩。”</p>
 <p>在学校出现症状的学生或工作人员将获得口罩，并与他们的同学或同事分开。然后他们会尽快被送回家，工作人员会对他们使用过的地方进行消毒。</p>
 <p>省首席卫生官已警告说，可能会有因员工生病而关闭的职能部门，除非出勤率大幅下降，否则将不再发送COVID-19确诊通知。</p>
 <p>大专院校的工作人员和学生也将在周一返回到现场上课。这包括卑诗省理工学院，尽管有数千名学生在网上签署请愿书，呼吁由于病例数激增而推迟面对面学习。</p>
@@ -29,41 +29,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/1/4/n13480599.md#1">休斯顿卫理公会近一半Omicron患者接种过疫苗</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/1/4/n13481005.md#1">Omicron变种5大症状 2迹象可能感冒化？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/1/5/n13484752.md#1">政府COVID-19措施 面临Omicron疫情考验</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/1/8/n13489625.md#1">研究表明疫苗对Omicron的有效性降低</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/1/8/n13491194.md#1">【名家专栏】Omicron或有助今冬结束大流行</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13655594.md#1">卑诗扩展电动车维修培训 今秋再添三所院校提供课程</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/15/n13648261.md#1">加拿大最适合留学生城市排名</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/14/n13646083.md#1">学费和生活费上涨 加国大学生担心毕业后债务</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/9/n13632125.md#1">【纪元专栏】学生阅读能力差 进步教学法误人子弟</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/2/18/n13585833.md#1">省府扩大3至4岁儿童学前教育计划</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/1/4/n13480599.md#1">休斯顿卫理公会近一半Omicron患者接种过疫苗</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/1/4/n13481005.md#1">Omicron变种5大症状 2迹象可能感冒化？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/1/5/n13484752.md#1">政府COVID-19措施 面临Omicron疫情考验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/1/8/n13489625.md#1">研究表明疫苗对Omicron的有效性降低</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/1/8/n13491194.md#1">【名家专栏】Omicron或有助今冬结束大流行</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/5/n13727323.md#1">移民部暂停移民邀请 急坏工签快到期留学生</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/3/29/n13679940.md#1">加拿大去年有45万名新留学生 创历史新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/3/25/n13672321.md#1">列治文青少年免费项目   帮助年轻人发展技能</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/3/23/n13668310.md#1">安省大学今年秋季学年第三年不涨学费</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/3/23/n13666699.md#1">列治文两项免费计划   帮助年轻父母与新移民</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042647.md#1" target="_blank">林辉：咏春拳文革遭遇是武林劫难的缩影</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180163.md#1" target="_blank">【征文】章阁：中国古代专制吗（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/6/n11571997.md#1" target="_blank">他们为我们的生活带来光明（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vfkyrj397/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vfkyrj397/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/11/n13496153.htm">卑诗省中小学生今日返校</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/11/n13496153.htm">卑诗省中小学生今日返校</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vfkyrj397/djy/blob/master/gb/22/1/11/n13496153.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vfkyrj397/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vfkyrj397/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/22/1/11/n13496153.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
